<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textSize="@dimen/prescription_title_size"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:text="@string/food_log_title"/>
    <TextView
        android:id="@+id/foodtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingTop="25dp"
        android:paddingBottom="0dp"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/foodtype"/>
    <AutoCompleteTextView
        android:id="@+id/foodtypevalue"
        style="@style/EditText"
        android:inputType="textPersonName"
        android:layout_toRightOf="@+id/foodtype"
        android:layout_alignBottom="@id/foodtype"
        android:focusable="true"
        android:layout_alignLeft="@+id/amount_food_value"
        android:layout_alignTop="@+id/foodtype" />
    <TextView
        android:id="@+id/amountfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ahm"
        android:layout_below="@+id/foodtype"
        android:layout_alignLeft="@+id/foodtype"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/amountfood"/>
    <EditText
        android:id="@+id/amount_food_value"
        style="@style/EditText"
        android:inputType="textPersonName"
        android:layout_below="@+id/foodtypevalue"
        android:layout_toRightOf="@+id/amountfood"

        android:layout_alignBottom="@id/amountfood"/>
    <TextView
        android:id="@+id/protein"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_marginTop="@dimen/ahm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountfood"
        android:layout_below="@+id/amountfood"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/protein" />
    <EditText
        android:id="@+id/protein_value"
        style="@style/EditText"
        android:layout_toRightOf="@+id/protein"
        android:layout_alignBottom="@id/protein"
        android:layout_alignLeft="@id/amount_food_value"
        android:layout_below="@+id/amount_food_value"
        android:inputType="textPersonName"/>
    <TextView
        android:id="@+id/calories"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginTop="@dimen/ahm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/protein"
        android:layout_below="@+id/protein"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/calories"/>
    <EditText
        android:id="@+id/calories_value"
        style="@style/EditText"
        android:inputType="textPersonName"
        android:layout_toRightOf="@+id/calories"
        android:layout_alignBottom="@id/calories"
        android:layout_alignLeft="@id/amount_food_value"
        android:layout_below="@+id/protein_value" />
    <TextView
        android:id="@+id/date_food"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginTop="@dimen/ahm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calories"
        android:layout_below="@+id/calories"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/date"/>
    <EditText
        android:id="@+id/date_value_f"
        style="@style/EditText"
        android:inputType="date"
        android:layout_toRightOf="@+id/date_food"
        android:layout_alignLeft="@id/amount_food_value"
        android:layout_alignBottom="@id/date_food"
        android:layout_below="@+id/calories_value" />
    />
    <TextView
        android:id="@+id/time_food"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginTop="@dimen/ahm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_food"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/time"/>
    <EditText
        android:id="@+id/time_value_f"
        style="@style/EditText"
        android:layout_alignBottom="@+id/time_food"
        android:inputType="time"
        android:layout_toRightOf="@+id/time_food"
        android:layout_alignLeft="@id/amount_food_value"
        android:layout_below="@+id/date_value_f" />

    <Button
        android:id="@+id/foodaddbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:onClick="foodInsertDataBase"
        android:layout_marginBottom="19dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/time_food"
        android:layout_toEndOf="@+id/time_food" />
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:onClick="goBack"
        android:layout_alignBaseline="@+id/foodaddbutton"
        android:layout_alignBottom="@+id/foodaddbutton"
        android:layout_alignLeft="@+id/time_value_f"
        android:layout_alignStart="@+id/time_value_f"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp" />
</RelativeLayout>