<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textSize="@dimen/prescription_title_size"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:text="@string/glucose_log_title"/>
    <TextView
        android:paddingTop="25dp"
        android:paddingBottom="5dp"
        android:id="@+id/glucose_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:layout_marginTop="80dp"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/glucose_level"
        />

    <TextView
        android:id="@+id/reading_taken"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ahm"
        android:layout_below="@+id/glucose_level"
        android:layout_alignLeft="@+id/glucose_level"
        android:text="@string/reading_taken"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        />
    <TextView
        android:id="@+id/date"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="@dimen/ahm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reading_taken"
        android:layout_below="@+id/reading_taken"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/date"

        />
    <TextView
        android:id="@+id/time"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="@dimen/ahm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reading_taken"
        android:layout_below="@+id/date"
        android:textColor="@color/maroon"
        android:textSize="@dimen/hidestringsize"
        android:text="@string/time"
        />

    <EditText
        android:id="@+id/glucose_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_toRightOf="@+id/glucose_level"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/glucose_level"
        android:focusable="true"
        android:layout_alignTop="@+id/glucose_level" />
    <EditText
        android:id="@+id/reading_taken_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@+id/glucose_value"
        android:layout_toRightOf="@+id/reading_taken"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/reading_taken"/>
    <EditText
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:layout_below="@+id/reading_taken_value"
        android:layout_toRightOf="@+id/date"
        android:layout_alignLeft="@+id/reading_taken_value"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/date"/>

    <EditText
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:inputType="textAutoComplete"
        android:layout_toRightOf="@+id/time"
        android:layout_alignLeft="@+id/date_value"
        android:layout_below="@+id/date_value" />

    <Button
        android:id="@+id/glucose_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:onClick="glucoseInsert"
        android:layout_marginLeft="13dp"
        android:layout_below="@+id/time_value"
        android:layout_toRightOf="@+id/time"
        android:layout_toEndOf="@+id/time"
        android:layout_marginStart="13dp"
        android:layout_marginTop="57dp" />
    <Button
        android:id="@+id/glucose_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:onClick="goBack"

        android:layout_alignBaseline="@+id/glucose_add_button"
        android:layout_alignBottom="@+id/glucose_add_button"
        android:layout_toRightOf="@+id/glucose_level"
        android:layout_toEndOf="@+id/glucose_level"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />


</RelativeLayout>